StorybookComponents - fix missing border issue (#2098)

--- a/packages/wix-storybook-utils/src/StorybookComponents/styles.scss
+++ b/packages/wix-storybook-utils/src/StorybookComponents/styles.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .light {
